fixing waitforvisible in test

--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -37,6 +37,7 @@ body {
 #blurb {
     margin-left: 30%;
     margin-right: 30%;
+    display:none;
     background-color: #fff;
     padding: 10px;
     text-align: center;
